--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,7 +40,7 @@
   </div>
   <br>
   <br> -->
-  <section class="main animated fadeIn">
+<!--section class="main animated fadeIn">
     <section class="left">
       <p class="title animate__animated animate__fadeInLeft">Bienvenido a Meditzin!</p>
       <p class="msg">Bienvenido a Meditzin, es tu mejor opcion para hacer una consulta con los mejores dentistas de tu zona. Tambien puedes
@@ -52,33 +52,122 @@
     <section class="right">
       <img src="../../../assets/img/img.png">
     </section>
-  </section>
+  </section-->
 
-  <div class="container mt-5 animated fadeIn" >
-  <div class="card-deck">
-    <div class="card">
-      <img class="card-img-top" src="../../../assets/img/img-muestra-2.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Rentar un consultorio</h5>
-        <p class="card-text">Revisa los consultorios en renta cerca de ti para comenzar con tu negocio</p>
-        <button type="button" class="btn btn-outline-primary btn-lg btn-block">Primary</button>
-      </div>
+  <div class="slider">
+    <div class="container">
+        <h1 class="animate__animated animate__fadeInLeft">Sonríe y el mundo sonríe <span>contigo</span></h1>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+          <button type="button" class="cta btn btn-primary" [routerLink]="['/consultas']">Ver consultorios</button>
+        </p>
+
+
     </div>
-    <div class="card">
-      <img class="card-img-top" src="../../../assets/img/img-muestra-3.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Buscar una consulta</h5>
-        <p class="card-text">Agenda una consulta en linea con los mejores dentistas de tu ciudad</p>
-        <a class="btn btn-outline-primary text-center btn-lg btn-block" [routerLink]="['/consultas']">Buscar</a>
-      </div>
+</div>
+
+
+
+<div class="about">
+    <div class="container">
+        <div class="text">
+
+
+            <span>Sobre nosotros</span>
+            <h1>Bienvenido a tu nueva clinica dental</h1>
+            <p>Somos una pagina dedicada a ayudar a los aspirantes a Odontologos a poder encontrar un local o si rentas uno tambien.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aperiam quod veniam perspiciatis quae neque, dolorum perferendis temporibus quasi! Perferendis saepe cum ea consequuntur. Quia aliquid debitis at illum sit!</p>
+
+
+        </div>
+        <div class="image">
+            <img src="https://i.imgur.com/jZ7IDdX.png" />
+        </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="../../../assets/img/img-muestra-4.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Rentar tu local</h5>
-        <p class="card-text">Ofrece tu local para poder ser rentado y empezar a ganar dinero</p>
-        <button type="button" class="btn btn-outline-primary btn-lg btn-block">Primary</button>
-      </div>
+</div>
+<div class="container mt-5 animated fadeIn">
+    <div class="card-deck">
+        <div class="card">
+            <img class="card-img-top" src="../../../assets/img/img-muestra-2.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Rentar un consultorio</h5>
+                <p class="card-text">Revisa los consultorios en renta cerca de ti para comenzar.</p>
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block">Rentar Consultorio</button>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="../../../assets/img/img-muestra-3.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Buscar una consulta</h5>
+                <p class="card-text">Agenda una consulta en linea con los mejores dentistas de tu ciudad</p>
+                <a class="btn btn-outline-primary text-center btn-lg btn-block" [routerLink]="['/consultas']">Buscar</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="../../../assets/img/img-muestra-4.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Rentar tu local</h5>
+                <p class="card-text">Ofrece tu local para poder ser rentado y empezar a ganar dinero</p>
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block">Rentar Local</button>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+<div class="Department">
+    <div class="container">
+        <span>Areas</span>
+        <h1>Nuestros Servicios </h1>
+        <!--div class="icons">
+          <div>
+              <i class="fas fa-tooth" style="font-size: 100px"></i>
+              <h4>Endodoncia</h4>
+          </div>
+          <div>
+              <i class="fas fa-heartbeat" style="font-size: 100px"></i>
+              <h4>Ortodoncia</h4>
+          </div>
+          <div>
+              <i class="fas fa-bone" style="font-size: 100px"></i>
+              <h4>Cariologia</h4>
+          </div>
+          <div>
+              <i class="fas fa-lungs" style="font-size: 100px"></i>
+              <h4>Periodontologia</h4>
+          </div>
+          <div>
+              <i class="fas fa-compress-arrows-alt" style="font-size: 100px"></i>
+              <h4>Odontopediatria</h4>
+          </div>
+      </div-->
+
+        <div class="text">
+            <div class="info">
+                <h4>Destistas confiables con equipo de primera</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
+                <img src="https://cdn1.iconfinder.com/data/icons/user-avatar-20/64/15-Dentist-256.png">
+
+            </div>
+            <div class="image">
+                <img src="https://i.imgur.com/uyUfvlJ.png" />
+            </div>
+        </div> <br>
+        <div class="text">
+            <div class="info">
+                <h4>Equipo de Calidad para el mejor desempeño</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
+
+                <img src="https://cdn3.iconfinder.com/data/icons/dental-premium-color-symbol/91/Dental_-_Tooth_-_Dentist_-_Dentistry_21-256.png">
+            </div>
+            <div class="image">
+                <img src="https://proinda.es/wp-content/uploads/2018/06/chair-2584260_960_720.jpg" height="570px" />
+            </div>
+        </div><br>
+
+    </div>
+</div>
+
+<div class="doctors">
+
+
+
+
 </div>
