--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,8 @@
+@import '~ngx-toastr/toastr';
+
 /* You can add global styles to this file, and also import other style files */
 .main-container {
   margin-top: 20px;
-}
-
-
-body{
-  background: #0f0c29;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 /*Animaciones*/
@@ -38,3 +33,21 @@ body{
 .fadeIn {
   animation-name: fadeIn;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  /* perspective: 600px;*/
+  margin: 0;
+  padding: 0;
+  /* font-family: "Muli", sans-serif; */
+  background: #1c92d2;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left #f2fcfe, #1c92d2);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #f2fcfe, #1c92d2);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
