--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -51,3 +51,227 @@ button.cta{
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1),0 15px 12px rgba(0, 0, 0, 0.08);
   cursor: pointer;
 }
+
+/*-----------Slider--------------------------------*/
+
+.slider {
+  width: 100%;
+  height: 600px;
+  background-image: url('https://i.imgur.com/BBhK8bd.png');
+  background-size: cover;
+}
+
+.slider .container {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.slider .container h1 {
+  font-size: 50px;
+  font-weight: bold;
+  line-height: 1.2;
+  padding-top: 200px;
+  width: 460px;
+  position: relative;
+  text-transform: uppercase;
+  margin-left: 100px;
+  font-family: "Muli", sans-serif;
+}
+
+.slider .container h1 span {
+  color: #1f2b7b;
+  position: absolute;
+  animation: animate__pulse 2s linear
+}
+
+.slider .container p {
+  font-size: 30px;
+  width: 600px;
+  margin-left: 100px;
+}
+
+
+/*--------------Sobre Nosotros-----------------------------*/
+
+.about {
+  width: 100%;
+  height: 700px;
+  margin-top: 30px;
+}
+
+.about .container {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.about .container .text {
+  float: left;
+  width: 40%;
+  padding-left: 40px;
+  color: #000;
+}
+
+.about .container .text span {
+  font-size: 20px;
+  width: 300px;
+  color: #d6101a;
+  ;
+  font-weight: bold;
+  display: inline-block;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.about .container .text h1 {
+  text-transform: capitalize;
+  margin-left: 10px;
+}
+
+.about .container .text p {
+  line-height: 1.2;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.about .container .image {
+  float: right;
+  width: 60%;
+  padding-left: 60px;
+  position: relative;
+}
+
+.about .container .image img:first-child {
+  z-index: 1;
+}
+
+.about .container .image img:last-child {
+  z-index: 2;
+  position: absolute;
+  top: 60px;
+  left: 300px;
+}
+
+
+/*------------Nuesros Servicios-------------------------------*/
+
+.Department {
+  width: 100%;
+  height: 1000px;
+  margin-top: 30px;
+}
+
+.Department .container {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+}
+
+.Department .container span {
+  color: #559af3;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.Department .container h1 {
+  text-transform: uppercase;
+  font-size: 50px;
+  line-height: 1.2
+}
+
+.Department .container .icons {
+  width: 900px;
+  height: 300px;
+  display: flex;
+  margin: auto;
+}
+
+.Department .container .icons div {
+  width: 200px;
+  height: 200px;
+  border: 1px solid #EEE;
+  margin-left: 20px;
+  padding: 30px 0px;
+  animation: fadeInLeft 3s 5 1s linear;
+}
+
+.Department .container .icons div:first-of-type {
+  background: #559af3;
+  color: #FFF;
+}
+
+.Department .container .icons div:hover {
+  background: #559af3;
+  color: #FFF;
+}
+
+.Department .container .text {
+  /*background-image: url('https://i.imgur.com/N7nmWOq.png');
+  background: #559af3;*/
+  color: #FFF;
+  width: 980px;
+  height: 570px;
+  margin: fixed;
+  padding: 30px;
+}
+
+.Department .container .text .info {
+  float: left;
+  width: 50%;
+}
+
+.Department .container .text .info h4 {
+  text-align: left;
+  font-size: 30px;
+  line-height: 1.3
+}
+
+.Department .container .text .info p {
+  text-align: left;
+  line-height: 1.3;
+  font-size: 20px
+}
+
+.Department .container .text .info button {
+  background: #FFF;
+  color: #000;
+  border: 1px solid #FFF;
+  width: 170px;
+  height: 60px;
+  padding: 10px;
+  margin-left: -300px;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.Department .container .text .image {
+  float: right;
+  width: 50%;
+}
+
+.Department .container .text .image img {
+  width: 100%;
+  margin-left: 30px;
+  margin-top: -30px;
+}
+
+
+/*-----------------Doctores Cartas--------------------------*/
+
+.doctors {
+  width: 100%;
+  height: 400px;
+}
+
+.doctors .container {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
