--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,64 +1,9 @@
-<!-- <div class="letras-slider">
-
-  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../../../assets/img/img-muestra.jpg" class="d-block w-100" alt="..." width="400" height="570">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../../../assets/img/img-muestra-2.jpg" class="d-block w-100" alt="..." width="400" height="570">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../../../assets/img/img-muestra-3.jpg" class="d-block w-100" alt="..." width="400" height="570">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  <br>
-  <br> -->
-<!--section class="main animated fadeIn">
-    <section class="left">
-      <p class="title animate__animated animate__fadeInLeft">Bienvenido a Meditzin!</p>
-      <p class="msg">Bienvenido a Meditzin, es tu mejor opcion para hacer una consulta con los mejores dentistas de tu zona. Tambien puedes
-        rentar un consultorio buscando los mejores precios, equipados con todo lo que necesitas para poder empezar como dentista. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Quia repudiandae aperiam, sit at esse itaque illum. Rerum ab velit,
-         quo, non labore deleniti iusto quia, tenetur dolorem odit necessitatibus sequi?</p>
-      <button type="button" class="cta btn btn-primary" [routerLink]="['/consultas']">Ver consultorios</button>
-    </section>
-    <section class="right">
-      <img src="../../../assets/img/img.png">
-    </section>
-  </section-->
-
-  <div class="slider">
+<div class="slider">
     <div class="container">
         <h1 class="animate__animated animate__fadeInLeft">Sonríe y el mundo sonríe <span>contigo</span></h1>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-          <button type="button" class="cta btn btn-primary" [routerLink]="['/consultas']">Ver consultorios</button>
+        <p>
+            Tu sonrisa tambien es parte de tu presentacion<br>
+            <button type="button" class="cta btn btn-primary" [routerLink]="['/consultas']">Ver consultorios</button>
         </p>
 
 
