Textos del home listos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,8 +19,9 @@
 
             <span>Sobre nosotros</span>
             <h1>Bienvenido a tu nueva clinica dental</h1>
-            <p>Somos una pagina dedicada a ayudar a los aspirantes a Odontologos a poder encontrar un local o si rentas uno tambien.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aperiam quod veniam perspiciatis quae neque, dolorum perferendis temporibus quasi! Perferendis saepe cum ea consequuntur. Quia aliquid debitis at illum sit!</p>
+            <p>Somos una pagina dedicada a ayudar a los Odontologos a poder encontrar un local o si rentas uno tambien.</p>
+            <p>Encontraras precios accesibles y cerca de ti, podras desarrollarte profesionalmente y cumplir con tus propositos personales
+            </p>
 
 
         </div>
@@ -87,7 +88,7 @@
         <div class="text">
             <div class="info">
                 <h4>Destistas confiables con equipo de primera</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
+                <p>En esta pagina encontrars a los mejores dentistas de la region, con los mejores perfiles de egresados y las mejores especialidades en la odontologia</p>
                 <img src="https://cdn1.iconfinder.com/data/icons/user-avatar-20/64/15-Dentist-256.png">
 
             </div>
@@ -98,7 +99,7 @@
         <div class="text">
             <div class="info">
                 <h4>Equipo de Calidad para el mejor desempeño</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
+                <p>Los mejores equipos de la mejor calidad y del pais, importados, con alta gama en tecnologia, el mejor trato lo recibes en las mejores sucursales, que esperas para cambiar tu sonrisa </p>
 
                 <img src="https://cdn3.iconfinder.com/data/icons/dental-premium-color-symbol/91/Dental_-_Tooth_-_Dentist_-_Dentistry_21-256.png">
             </div>
