--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,8 @@
-footer{
-  background-color: rgb(0, 0, 0);
-  margin-top: 100px;
-  color: white;
-  font-weight: bold;
+footer {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    width: 100%;
+    height: 61px;
+    bottom: 0;
+    align-self: flex-end;
 }
