Ya hace display de las consultas correctamente, hago commit antes de empezar con login

--- a/src/app/pages/mis-consultas/mis-consultas.component.html
+++ b/src/app/pages/mis-consultas/mis-consultas.component.html
@@ -24,7 +24,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let consulta of consultas">
-      <th scope="row">{{consulta.id}}</th>
+      <th scope="row">{{consulta.nombreConsultorio}}</th>
       <td>{{consulta.fecha | date: 'medium' }}</td>
       <td>{{consulta.razon}}</td>
       <td>
