login maquetado, falta funcionalidad

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <div class="container animated fadeIn"></div>
 <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
