--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,19 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue ">
+<!-- <footer class="page-footer font-small blue "> -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 BlackBox
+  <!-- <div class="footer-copyright text-center py-3">© 2020 BlackBox -->
     <!-- <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>-->
-  </div>
+  <!-- </div> -->
   <!-- Copyright -->
 
-</footer>
+<!-- </footer> -->
 <!-- Footer -->
+
+<footer class="footer bg-dark text-center">
+  <div class="container">
+    <p>
+      © 2020 BlackBox
+    </p>
+  </div>
+</footer>
