--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" [routerLink]="['home']"><img src="../../../assets/img/tooth-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     Meditzin</a>
 
@@ -18,7 +18,7 @@
       </li>
     </ul>
     <span class="nav-item float-end">
-      <a [routerLink]="['home']"><i class="fas fa-user mr-2"></i>Perfil</a>
+      <a [routerLink]="['login']"><i class="fas fa-user mr-2"></i>Perfil</a>
     </span>
   </div>
 </nav>
