--- a/src/app/pages/consultorio/consultorio.component.html
+++ b/src/app/pages/consultorio/consultorio.component.html
@@ -34,7 +34,7 @@
                   </div>
                   <div class="form-group col-md-6">
                       <label for="inputPassword4">Numero telefonico</label>
-                      <input type="number" class="form-control" formControlName="numero" placeholder="272 159 6986" />
+                      <input type="tel" class="form-control" formControlName="numero" placeholder="272 159 6986" />
                   </div>
               </div>
               <div class="form-group">
