--- a/src/styles.css
+++ b/src/styles.css
@@ -45,9 +45,9 @@ body {
   /* font-family: "Muli", sans-serif; */
   background: #1c92d2;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left #f2fcfe, #1c92d2);
+  background: -webkit-linear-gradient(to left #98e4f3, #1c92d2);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #f2fcfe, #1c92d2);
+  background: linear-gradient(to left, #98e4f3, #1c92d2);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
