--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,8 +1,7 @@
 footer {
-    background-color: rgb(0, 0, 0);
     color: white;
     width: 100%;
-    height: 61px;
-    bottom: 0;
-    align-self: flex-end;
+    height: 30px;
+    position: fixed;
+    bottom: 0px;
 }
