cambios menores al login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,8 +10,8 @@
       <!-- For Demo Purpose -->
       <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
           <img src="../../../assets/img/img.png" alt="" class="img-fluid mb-3 d-none d-md-block">
-          <h1>Meditzin</h1>
-          <p class="font-italic mb-0">La web que te hace sonreir</p>
+          <h1 style="font-size: 50px;">Meditzin</h1>
+          <p class="font-italic mb-0" style="font-size: 20px;">La web que te hace sonreir</p>
           <p class="font-italic text-muted">Powered by Firebase
           </p>
       </div>
@@ -74,11 +74,15 @@
 
                   <!-- Social Login -->
                   <div class="form-group col-lg-12 mx-auto">
-                      <a href="#" class="btn btn-primary btn-block py-2 btn-facebook">
+                      <a class="btn btn-primary btn-block py-2 btn-facebook">
                           <i class="fa fa-facebook-f mr-2"></i>
                           <span class="font-weight-bold"><i class="fab fa-facebook-square mr-3 fa-2x"></i>Continue with Facebook</span>
                       </a>
-                      <a href="#" class="btn btn-primary btn-block py-2 btn-twitter">
+                      <a class="btn btn-primary btn-block py-2 b">
+                        <i class="fa fa-facebook-f mr-2"></i>
+                        <span class="font-weight-bold"><i class="fab fa-google mr-3 fa-2x"></i>Continue with Google</span>
+                    </a>
+                      <a class="btn btn-primary btn-block py-2 btn-twitter">
                           <i class="fa fa-twitter mr-2"></i>
                           <span class="font-weight-bold"><i class="fab fa-twitter-square mr-3 fa-2x"></i>Continue with Twitter</span>
                       </a>
