--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -5,6 +5,8 @@
 .btn-facebook {
   background: #405D9D;
   border: none;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
 }
 
 .btn-facebook:hover, .btn-facebook:focus {
@@ -14,9 +16,22 @@
 .btn-twitter {
   background: #42AEEC;
   border: none;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
 }
 
 .btn-twitter:hover, .btn-twitter:focus {
+  background: #1799e4;
+}
+
+.btn-google {
+  background: #dd4b39;
+  border: none;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
+}
+
+.btn-google:hover, .btn-google:focus {
   background: #1799e4;
 }
 
