--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import '~ngx-toastr/toastr';
+@import "~animate.css/animate.css";
 
 /* You can add global styles to this file, and also import other style files */
 .main-container {
