Duracion del wowjs ajustado

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,7 +33,7 @@
 </div>
 <div class="container mt-5">
   <div class="card-deck">
-    <div class="card wow animate__animated animate__fadeInLeft" data-wow-duration="1.75s" data-wow-delay=".25s">
+    <div class="card wow animate__animated animate__fadeInLeft" data-wow-duration="1" data-wow-delay=".25s">
       <img class="card-img-top" src="../../../assets/img/img-muestra-2.jpg" alt="Card image cap" />
       <div class="card-body">
         <h5 class="card-title">Rentar un consultorio</h5>
@@ -45,7 +45,7 @@
         </button>
       </div>
     </div>
-    <div class="card wow animate__animated animate__fadeInUp" data-wow-duration="1.75s" data-wow-delay=".35s">
+    <div class="card wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".35s">
       <img class="card-img-top" src="../../../assets/img/img-muestra-3.jpg" alt="Card image cap" />
       <div class="card-body">
         <h5 class="card-title">Buscar una consulta</h5>
@@ -55,7 +55,7 @@
         <a class="btn btn-outline-primary text-center btn-lg btn-block" [routerLink]="['/consultas']">Buscar</a>
       </div>
     </div>
-    <div class="card wow animate__animated animate__fadeInRight" data-wow-duration="1.75s" data-wow-delay=".45s">
+    <div class="card wow animate__animated animate__fadeInRight" data-wow-duration="1s" data-wow-delay=".45s">
       <img class="card-img-top" src="../../../assets/img/img-muestra-4.jpg" alt="Card image cap" />
       <div class="card-body">
         <h5 class="card-title">Rentar tu local</h5>
